--- a/style.css
+++ b/style.css
@@ -22,15 +22,25 @@
   max-height: 100vh;
   max-width: 100vw;
 }
-.darkness {
+/* .darkness {
   background-color: rgba(0, 0, 0, 0.676);
   max-height: 100vh;
   width: 100vw;
   position: absolute;
+} */
+@keyframes slidein {
+  from {
+    transform: translateX(100%);
+  }
+
+  to {
+    transform: translateX(0%);
+  }
 }
 .main-page-content {
   background-color: rgba(0, 0, 0, 0.676);
 
+  animation: 4s ease-in-out 3s slidein;
   min-height: 100vh;
   width: 100vw;
   display: flex;
@@ -39,16 +49,21 @@
   position: absolute;
   color: white;
   gap: 2vh;
+  visibility: hidden;
 }
 .main-page-content > h1 {
   margin: 15px;
-  font-size: 50px;
+  font-size: 55px;
   font-weight: 300;
+  text-decoration-line: underline;
+  text-decoration-style: double;
 }
 .main-page-content > img {
-  height: 50vh;
+  height: 45vh;
   border-radius: 70%;
   margin: 6vh;
+  filter: brightness(80%);
+  border: 1mm ridge rgb(180, 180, 180);
 }
 .roles {
   display: flex;
@@ -74,15 +89,18 @@
   margin: 0vh;
 }
 .main-page-content > button {
-  background-color: rgb(232, 229, 39);
+  background-color: rgb(211, 208, 46);
   border: none;
-  padding: 3px 3px;
+  padding: 4px 5px;
   border-radius: 20px;
-  height: 4vh;
-  width: 4vw;
+  height: 5vh;
+  width: 8vw;
   box-shadow: inset 1px 1px 1px 1px rgba(0, 0, 0, 0.333);
 }
-.main-page-content > button > img {
+/* .main-page-content > button > img {
   height: 2vh;
   width: 2vw;
+} */
+button > h4 {
+  font-size: 15px;
 }
