--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Jacques Francois', serif;
-
   font-style: normal;
 }
 .bg-img {
@@ -22,12 +20,7 @@
   max-height: 100vh;
   max-width: 100vw;
 }
-/* .darkness {
-  background-color: rgba(0, 0, 0, 0.676);
-  max-height: 100vh;
-  width: 100vw;
-  position: absolute;
-} */
+
 @keyframes slidein {
   from {
     transform: translateX(100%);
@@ -48,7 +41,7 @@
   align-items: center;
   position: absolute;
   color: white;
-  gap: 2vh;
+  gap: 1.5vh;
   visibility: hidden;
 }
 .main-page-content > h1 {
@@ -57,6 +50,7 @@
   font-weight: 300;
   text-decoration-line: underline;
   text-decoration-style: double;
+  font-family: 'Jacques Francois', serif;
 }
 .main-page-content > img {
   height: 45vh;
@@ -75,32 +69,37 @@
   font-size: 28px;
   color: rgb(229, 229, 14);
   font-weight: 400;
+  font-family: 'Jacques Francois', serif;
 }
 .roles > h1 {
   font-size: 35px;
   font-weight: 400;
+  font-family: 'Jacques Francois', serif;
 }
 
 .main-page-content > h4 {
-  font-size: 20px;
-  font-weight: 300;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 200;
 }
 .main-page-content button {
-  margin: 0vh;
+  margin-top: 3vh;
 }
 .main-page-content > button {
-  background-color: rgb(211, 208, 46);
+  background-color: rgb(188, 186, 36);
   border: none;
-  padding: 4px 5px;
+  padding: 3px 4px;
   border-radius: 20px;
   height: 5vh;
   width: 8vw;
   box-shadow: inset 1px 1px 1px 1px rgba(0, 0, 0, 0.333);
+  font-family: sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  text-decoration: underline;
 }
-/* .main-page-content > button > img {
-  height: 2vh;
-  width: 2vw;
-} */
-button > h4 {
-  font-size: 15px;
+.main-page-content > button:hover {
+  background-color: rgb(234, 231, 10);
+  font-size: 16px;
+  box-shadow: none;
 }
