--- a/global.css
+++ b/global.css
@@ -1,13 +1,19 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-style: normal;
+}
+html,
+body {
+  overflow: hidden;
+  height: 100vh;
 }
 :root {
   --overlay-color: rgba(0, 0, 0, 0.676);
 }
 .bg-img {
-  max-height: 100vh;
+  height: 100vh;
   width: 100vw;
   background-image: url('assets/bg.JPG');
   background-size: cover;
@@ -24,7 +30,7 @@
 
 .overlay {
   background-color: var(--overlay-color);
-  max-height: 100vh;
+  height: 100%;
   width: 100vw;
   position: absolute;
 }
