--- a/services.css
+++ b/services.css
@@ -6,8 +6,8 @@
 h1 {
   font-family: 'Jacques Francois', serif;
   font-weight: 300;
-  margin: 2rem;
-  font-size: 30px;
+  margin-top: 3rem;
+  font-size: 40px;
   text-align: center;
   color: var(--yellow-color);
   -webkit-text-stroke: 0.2px #474747;
@@ -50,5 +50,48 @@ h1 {
 .services h3 {
   color: rgb(247, 245, 245);
   font-size: 16px;
-  letter-spacing: 0.75px;
+  letter-spacing: 0.5px;
+}
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project-card {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 35vh;
+  width: 20vw;
+  margin-top: 2rem;
+  gap: 0.75rem;
+  text-align: center;
+  padding: 5px 5px;
+  background-color: #6462628d;
+  border: 1px solid white;
+  border-radius: 25px;
+  position: relative;
+  overflow: hidden;
+}
+.project-card img {
+  position: absolute;
+  object-position: center center;
+  object-fit: fill;
+  height: 90%;
+  width: 95%;
+  opacity: 1;
+  border-radius: 10px;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.project-card h3 {
+  color: white;
+  position: absolute;
+  z-index: 4;
+  transition: opacity 0.2s ease-in-out;
+  text-align: center;
+  width: 100%;
+  opacity: 0;
 }
