--- a/services.css
+++ b/services.css
@@ -6,7 +6,7 @@
 h1 {
   font-family: 'Jacques Francois', serif;
   font-weight: 300;
-  margin-top: 3rem;
+  margin-top: 4rem;
   font-size: 40px;
   text-align: center;
   color: var(--yellow-color);
@@ -19,7 +19,7 @@ h1 {
 .services {
   width: 70vw;
   margin: auto;
-  margin-top: 3rem;
+  margin-top: 2rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -49,12 +49,18 @@ h1 {
 }
 .services h3 {
   color: rgb(247, 245, 245);
-  font-size: 16px;
-  letter-spacing: 0.5px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  font-weight: 100;
+  letter-spacing: 0.75px;
+  line-height: 1.5;
 }
 .projects {
   display: flex;
   flex-wrap: wrap;
+  width: 90%;
+  margin: auto;
+  gap: 2rem;
 }
 
 .project-card {
@@ -63,14 +69,13 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  height: 35vh;
-  width: 20vw;
-  margin-top: 2rem;
-  gap: 0.75rem;
+  height: 30vh;
+  width: 22vw;
+  margin-top: 3rem;
   text-align: center;
   padding: 5px 5px;
   background-color: #6462628d;
-  border: 1px solid white;
+  border: 1px solid rgb(157, 157, 157);
   border-radius: 25px;
   position: relative;
   overflow: hidden;
@@ -79,8 +84,8 @@ h1 {
   position: absolute;
   object-position: center center;
   object-fit: fill;
-  height: 90%;
-  width: 95%;
+  height: 93%;
+  width: 98%;
   opacity: 1;
   border-radius: 10px;
   transition: opacity 0.2s ease-in-out;
@@ -94,4 +99,11 @@ h1 {
   text-align: center;
   width: 100%;
   opacity: 0;
+}
+
+.vertical {
+  margin-top: 2rem;
+  height: 100%vh;
+  width: 1px;
+  border: 1px solid var(--yellow-color);
 }
