--- a/resume.css
+++ b/resume.css
@@ -19,24 +19,24 @@
   padding: 20px;
   flex-wrap: wrap;
   line-height: 50px;
-  font-size: 18px;
+  font-size: 20px;
 }
 .yellow {
   color: var(--yellow-color);
 }
 ul > li {
   padding: 15px;
-  font-family: serif;
-  font-size: 17px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
   letter-spacing: 1.05px;
 }
 ul li::marker {
   font-size: 3rem;
 }
-hr {
+.vertical {
   height: 400px;
   position: absolute;
-  right: 44.75rem;
+  right: 43rem;
 }
 
 /* slider */
@@ -97,16 +97,13 @@ hr {
 }
 .skills-text {
   width: 45%;
-  padding: 20px;
   flex-wrap: wrap;
   line-height: 50px;
-  font-size: 18px;
+  font-size: 20px;
 }
 .skill-bars-portion {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   width: 50%;
 }
 .pb-card {
@@ -134,5 +131,4 @@ progress::-webkit-progress-bar {
 progress::-webkit-progress-value {
   background-color: var(--yellow-color);
   border-radius: 7px;
-  /* box-shadow: 1px 1px 5px 3px rgba(255, 0, 0, 0.8); */
 }
