--- a/global.css
+++ b/global.css
@@ -9,8 +9,9 @@
 
 html,
 body {
-  overflow: hidden;
-  height: 100vh;
+  overflow-x: hidden;
+  height: auto;
+  min-height: 100vh;
 }
 :root {
   --overlay-color: rgba(0, 0, 0, 0.85);
